# advent-of-code-2021

./: Cargo.toml  README.md
2018/: Cargo.toml
2018/src/: lib.rs
2021/: Cargo.toml
2021/src/: astar_weighted.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day18_heap.rs  day18_sed.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day23_part2.rs  day24.rs  day25.rs  index.rs  lib.rs  linear.rs
2021/src/sample/: day20.step2  day20.step3
2025/day1/: part2.el
2025/day10/: Cargo.toml
2025/day10/src/: main.rs  parse.rs  part2.rs
2025/day2/: .gitignore  day2.el  part1.el
2025/day3/: Cargo.toml
2025/day3/src/: .gitignore  main.rs
2025/day4/src/: .gitignore  main.rs
2025/day5/src/: main.rs
2025/day6/: Cargo.toml
2025/day6/src/: main.rs
2025/day7/: Cargo.toml
2025/day7/src/: .gitignore  main.rs
2025/day8/: Cargo.toml
2025/day8/src/: .gitignore  distances.rs  main.rs  sets.rs
2025/day9/: .gitignore  Cargo.toml
2025/day9/src/: bands.rs  edge.rs  main.rs  part2.rs  ranges_iter.rs  render.rs  test_data.rs
aoc-utils/: Cargo.toml
aoc-utils/src/: astar.rs  astar_weighted.rs  bfs.rs  lib.rs  machine.rs  ones_iter.rs  ring.rs  unfold.rs
src/: day05.rs  day06.rs  day07.rs  day08.rs  lib.rs
