[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
aoc-runner = "0.3"
aoc-runner-derive = "0.3"
env_logger = "0.9"
hashbrown = "0.11"
itertools = "0.10"
log = "0.4"
ndarray = "0.15"
thiserror = "1.0"
